app-of-apps/applications/k8s-manifests/keycloak/keycloak.yaml
---
## https://raw.githubusercontent.com/keycloak/keycloak-quickstarts/refs/heads/main/kubernetes/keycloak-ingress.yaml
##
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
  - host: auth.devenv.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080

---
## https://raw.githubusercontent.com/keycloak/keycloak-quickstarts/refs/heads/main/kubernetes/keycloak.yaml
##
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: http
    name: http
  selector:
    app: keycloak
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak-discovery
spec:
  selector:
    app: keycloak
  clusterIP: None
  type: ClusterIP

---
apiVersion: apps/v1
# Use a stateful setup to ensure that for a rolling update Pods are restarted with a rolling strategy one-by-one.
# This prevents losing in-memory information stored redundantly in two Pods.
kind: StatefulSet
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  serviceName: keycloak-discovery
  # Run with one replica to save resources, or with two replicas to allow for rolling updates for configuration changes
  replicas: 2
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.5.4
        args:
        - start
        ports:
        - name: http
          containerPort: 8080
        - name: jgroups
          containerPort: 7800
        - name: jgroups-fd
          containerPort: 57800
        startupProbe:
          httpGet:
            path: /health/started
            port: 9000
          periodSeconds: 1
          failureThreshold: 600
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 9000
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /health/live
            port: 9000
          periodSeconds: 10
          failureThreshold: 3
        resources:
          limits:
            cpu: 2000m
            memory: 2000Mi
          requests:
            cpu: 500m
            memory: 1700Mi

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak-postgres
  name: keycloak-postgres
spec:
  selector:
    app: keycloak-postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak-postgres
  labels:
    app: keycloak-postgres
spec:
  serviceName: keycloak-postgres
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-postgres
  template:
    metadata:
      labels:
        app: keycloak-postgres
    spec:
      securityContext:
        runAsUser: 999
        runAsGroup: 999
      containers:
      - name: keycloak-postgres
        image: postgres:17.9
        ports:
        - name: postgres
          containerPort: 5432
        volumeMounts:
        # Using volume mount for PostgreSQL's data folder as it is otherwise not writable
        - name: keycloak-postgres-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: keycloak-postgres-data
        persistentVolumeClaim:
          claimName: keycloak-postgres-data
  volumeClaimTemplates:
  - metadata:
      name: keycloak-postgres-data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: ssd-nfs-retain
      volumeMode: Filesystem
      resources:
        requests:
          storage: 4Gi
